# StatPhysMLSimPlayground

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  THEORY.md  components.md  concepts.md  experiments.md  frontier.md  getting_started.md  glossary.md  online_sgd_learning_note.md  order_parameters.md  package_structure.md  phase_continuation.md  replica_note.md  slurm.md  visualization.md
examples/: README.md  basic_usage.ipynb  committee_machine.py  custom_components_tutorial.ipynb  custom_components_tutorial_ja.ipynb  dataset_gallery.ipynb  general_teacher_student.py  model_gallery.ipynb  online_sgd_learning.py  replica_ridge_regression.py  theory_vs_simulation_verification_en.ipynb  theory_vs_simulation_verification_ja.ipynb
experiments/phase_continuation/: PHASE_TENSOR.md  README.md  claims.toml  coverage.toml  evidence_tiers.toml  paper_claims.toml  phase_tensor_taxonomy.toml  taxonomy.toml
experiments/phase_continuation/cluster/: dgx.toml  dgx_cpu.toml  dgx_gpu.toml  dgx_spark.toml
experiments/phase_continuation/configs/: continuation_diagnostics.toml  cross_domain.toml  domain_programs.toml  learned_diffusion.toml  learned_multiagent.toml  learned_reinforcement.toml  learned_transformer.toml  paper.toml  tensor_mlp.toml  (+7 more)
experiments/predictive_phase_continuation/: README.md  config.toml  phasecard.toml
experiments/transformer_phase_atlas/: README.md  claims.toml  probe_environment.py
paper/: .gitignore  README.md  macros.tex  main.tex  references.bib
paper/archive/: frontier_atlas.tex
paper/predictive/: main.tex  references.bib
paper/sections/: 00_abstract.tex  01_introduction.tex  02_prior_work.tex  02_related_work.tex  02_taxonomy.tex  03_framework.tex  03_model.tex  04_protocol.tex  04_statistics.tex  05_audit.tex  05_results.tex  06_discussion.tex  06_transformer_diffusion.tex  07_conclusion.tex  07_rl_agents.tex  08_prediction.tex  08b_empirical_tensor.tex  09_limitations.tex  10_conclusion.tex  appendix.tex
requirements/: phase-tensor.txt
scripts/: README.md  generate_readme_assets.py  run_phase_study.py  run_verification.py  verify_architectures.py
scripts/phase_tensor/: README.md  expand-confirmation-manifests.sh  expand-manifests.sh  postprocess.sh  prepare-data.sh  render-evidence-paper.sh  render-paper.sh  run-array.sh  setup-node.sh  submit.sh
src/statphys/: __init__.py  cli.py  quick.py
tests/: README.md  __init__.py  conftest.py  run_verification.py  test_animation.py  test_cli_dynamics.py  test_dataset.py  test_experiment.py  test_fixes.py  test_frontier.py  test_loss.py  test_model.py  test_observables.py  test_online_committee.py  test_order_params.py  test_phase_tensor_data.py  test_phase_tensor_reporting.py  test_realistic.py  test_realistic_extensions.py  test_simulation.py  test_theory.py  test_zoo_slurm.py
tests/atlas/: test_aggregate.py  test_analysis.py  test_data.py  test_models.py  test_observables.py  test_plotting.py
tests/continuation/: test_aggregate.py  test_coverage.py  test_domains.py  test_orchestration.py  test_program_registry.py  test_schema.py  test_taxonomy.py
tests/predictive/: test_pipeline.py
(+255 files in other folders)
